--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  just_audio: ^0.9.36
+  audio_service: ^0.18.12
+  permission_handler: ^11.3.0
+  flutter_bloc: ^8.1.5
+  carousel_slider: ^4.2.1
+  http: ^1.2.1
+  animated_splash_screen: ^1.3.0
+  page_transition: ^2.1.0
 
 dev_dependencies:
   flutter_test:
